8041928: MouseEvent.getModifiersEx gives wrong result

Reviewed-by: alexsch, serb, rchamyal