jdk/src/windows/native/sun/windows/awt_Component.cpp
@@ -2679,6 +2679,9 @@ AwtComponent::GetJavaModifiers()
     if (HIBYTE(::GetKeyState(VK_MENU)) != 0) {
         modifiers |= java_awt_event_InputEvent_ALT_DOWN_MASK;
     }
+    if (HIBYTE(::GetKeyState(VK_RMENU)) != 0) {
+        modifiers |= java_awt_event_InputEvent_ALT_GRAPH_DOWN_MASK;
+    }
     if (HIBYTE(::GetKeyState(VK_MBUTTON)) != 0) {
        modifiers |= java_awt_event_InputEvent_BUTTON2_DOWN_MASK;
     }
